# JARVIS

./: .env  .gitignore  GPT_QA_PLAN.md  PLAN.md  QA_PLAN.md  architecture.md  cli.py  install.cmd  main.py  need to fix.md  nuitka-crash-report.xml  plan_to_100%_mvp.md  qa_gpt_checklist.md  readme.md  requirements.txt  russian_integration.md  setup.py  test.pcm  ui.py  user_language.py  voice_remaining_plan.md  voiceover_plan.md  witch master  ws_ui.py
actions/: browser_control.py  cmd_control.py  code_helper.py  computer_control.py  computer_settings.py  desktop.py  dev_agent.py  file_controller.py  flight_finder.py  open_app.py  protocol_manager.py  registry.py  reminder.py  screen_processor.py  send_message.py  weather_report.py  web_search.py  youtube_video.py
agent/: error_handler.py  executor.py  planner.py  task_queue.py
aria/: api_server.py  input_adapter.py  oled_formatter.py  output_adapter.py  server_runner.py
clarification/: clarification_handler.py
config/: api_keys.json  protocols.json
confirmation/: confirmation_gate.py
context/: session_context.py
core/: prompt.txt
desktop/: README.md  V.E.C.T.O.R_Presentation.txt  V.E.C.T.O.R_Presentation_RU.txt  __init__.py  main.py
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: lib.rs  main.rs
development_guides/: architecture.md  documentation.md
docs/: clarification_rules.md  command_model.md  desktop_actions.md  desktop_execution.md  desktop_shell_plan.md  desktop_shell_progress.md  dialogue_layer_plan.md  (+28 more)
(+241 files in other folders)
